<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="20dp"
        android:text="@string/bill_total_with_tax"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNumberDecimal"
        android:layout_width="190dp"
        android:layout_height="48dp"
        android:background="#98FB98"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.89"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01999998" />

    <TextView
        android:id="@+id/tipPercentTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip_percent"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.060000002" />

    <TextView
        android:id="@+id/tipAmountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip_amount"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.060000002" />

    <TextView
        android:id="@+id/totalWithTipTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_with_tip"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/tipAmountText"
        app:layout_constraintVertical_bias="0.06999999" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipPercentTextView">

        <RadioButton
            android:id="@+id/radioButton_12_percent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/purple_500"
            android:onClick="onClickTipRadioButton"
            android:text="@string/_12"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radioButton_15_percent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/purple_500"
            android:onClick="onClickTipRadioButton"
            android:text="@string/_15"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radioButton_18_percent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/purple_500"
            android:onClick="onClickTipRadioButton"
            android:text="@string/_18"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radioButton_20_percent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/purple_500"
            android:onClick="onClickTipRadioButton"
            android:text="@string/_20"
            android:textSize="20sp" />
    </RadioGroup>

    <View
        android:id="@+id/divider_horizontal"
        android:layout_width="350dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.47000003" />

    <TextView
        android:id="@+id/noOfPeopleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/number_of_people"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/totalWithTipTextView"
        app:layout_constraintTop_toBottomOf="@+id/divider_horizontal" />

    <TextView
        android:id="@+id/tipAmountReadOnlyTextView"
        android:layout_width="0dp"
        android:layout_height="40sp"
        android:layout_marginStart="105dp"
        android:background="#D3D3D3"
        android:gravity="center"
        android:textAlignment="textEnd"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tipAmountText"
        app:layout_constraintEnd_toEndOf="@+id/editTextNumberDecimal"
        app:layout_constraintHorizontal_bias="0.532"
        app:layout_constraintStart_toEndOf="@+id/tipAmountText"
        app:layout_constraintTop_toTopOf="@+id/tipAmountText" />

    <TextView
        android:id="@+id/totalWithTipReadOnly"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="#D3D3D3"
        android:gravity="center"
        android:textAlignment="textEnd"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/totalWithTipTextView"
        app:layout_constraintEnd_toEndOf="@+id/editTextNumberDecimal"
        app:layout_constraintStart_toStartOf="@+id/tipAmountReadOnlyTextView"
        app:layout_constraintTop_toTopOf="@+id/totalWithTipTextView" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="90dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:background="#98FB98"
        android:ems="10"
        android:inputType="number"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toBottomOf="@+id/noOfPeopleTextView"
        app:layout_constraintStart_toEndOf="@+id/noOfPeopleTextView"
        app:layout_constraintTop_toTopOf="@+id/noOfPeopleTextView" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:onClick="onClickGo"
        android:text="@string/go_button"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextNumber"
        app:layout_constraintEnd_toEndOf="@+id/editTextNumberDecimal"
        app:layout_constraintStart_toEndOf="@+id/editTextNumber"
        app:layout_constraintTop_toTopOf="@+id/editTextNumber" />

    <TextView
        android:id="@+id/totalPerPersonTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/total_per_person"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/noOfPeopleTextView"
        app:layout_constraintTop_toBottomOf="@+id/noOfPeopleTextView"
        app:layout_constraintVertical_bias="0.174" />

    <TextView
        android:id="@+id/totalPerPersonReadOnly"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="#D3D3D3"
        android:gravity="center"
        android:textAlignment="textEnd"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/totalPerPersonTextView"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintStart_toStartOf="@+id/editTextNumber"
        app:layout_constraintTop_toTopOf="@+id/totalPerPersonTextView" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickClear"
        android:text="@string/clear_button"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider_horizontal"
        app:layout_constraintVertical_bias="0.64" />

</androidx.constraintlayout.widget.ConstraintLayout>